--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Kanye's secret</title>
 	<link rel='stylesheet' href='style.css'>
-	<link rel='shortcut icon' href='favicon.png'>
+	<link rel='shortcut icon' href='favicon.jpg'>
 </head>
 <body>
 	<div class="flex">
@@ -15,6 +15,7 @@
 		<button id="submit">Submit</button>
 		<div id="decrypted-message"></div>	
 	</div>
+	<a href="https://github.com/jonahksimmons/creative_project_2_cs260">Link to github repo</a>
 </body>
 <script text="type/javascript" src="script.js"></script>
 </html>
